cap8-balanceamento-de-carga-HTTP-com-Ingress/simple-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: simple-ingress
spec:
  rules:
  # deixar passar todo serviço que chegam na requisição para alpaca.example.com  
  - host: alpaca.example.com
    http:
      paths:
      - backend:
          serviceName: alpaca
          servicePort: 8080
